# colgate

./: .gitignore  README.md  app.py  chunking.py  main.py  pyproject.toml  scraper.py  scraper_wikipedia.py  scraper_youtube.py
data/: knowledge_base.txt  paginas_raw.json  wikipedia_raw.json  youtube_raw.json
